# Cpyquaticus

./: # DISTRIBUTION STATEMENT A. Approved for public re  README.md  pyproject.toml
cpyquaticus/: __init__.py  _version.py  cpyquaticus_v0.py
cpyquaticus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cpyquaticus/base_policies/: BasePolicies.py
cpyquaticus/envs/: BasePolicies.py  actual_pos.c  actual_pos.h  agent_0_0.24.pt  agent_0_0.48.pt  agent_0_0.72.pt  agent_0_10.pt  agent_0_15.pt  agent_0_20.pt  agent_0_25.pt  agent_0_30.pt  agent_0_35.pt  agent_0_40.pt  agent_0_5.pt  agent_1_0.24.pt  agent_1_0.48.pt  agent_1_0.72.pt  agent_1_10.pt  agent_1_15.pt  agent_1_20.pt  agent_1_25.pt  agent_1_30.pt  agent_1_35.pt  agent_1_40.pt  agent_1_5.pt  c_binding.py  c_pyquaticus.py  clean_ppo.py  cpyquaticus  cpyquaticus.c  cpyquaticus.dylib  cpyquaticus.py  cpyquaticusclear  ctests.c  dict_based_sequential.py  faster_envs.py  flag  flag.c  flag.h  heron  (+25 more)
rl_examples/: league_play.py  load_clean.py  out  petting_zoo_train.py
rl_examples/League/: PPO_blue_exploiter_0_0.pt  PPO_blue_exploiter_0_1.pt  PPO_blue_exploiter_0_10.pt  PPO_blue_exploiter_0_11.pt  PPO_blue_exploiter_0_12.pt  PPO_blue_exploiter_0_13.pt  PPO_blue_exploiter_0_14.pt  PPO_blue_exploiter_0_15.pt  PPO_blue_exploiter_0_16.pt  PPO_blue_exploiter_0_17.pt  PPO_blue_exploiter_0_18.pt  PPO_blue_exploiter_0_19.pt  PPO_blue_exploiter_0_2.pt  PPO_blue_exploiter_0_20.pt  PPO_blue_exploiter_0_21.pt  PPO_blue_exploiter_0_22.pt  PPO_blue_exploiter_0_23.pt  PPO_blue_exploiter_0_24.pt  PPO_blue_exploiter_0_3.pt  PPO_blue_exploiter_0_4.pt  PPO_blue_exploiter_0_5.pt  PPO_blue_exploiter_0_6.pt  (+78 more)
(+34 files in other folders)
